--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-$myfile = fopen("home.php);
+<meta http-equiv="refresh" content="0; url=http://seicani.altervista.org/home.php" />
 </body>
 </html>
